--- a/res/layout/activity_menu.xml
+++ b/res/layout/activity_menu.xml
@@ -1,11 +1,88 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:background="@drawable/main_bg"
+    android:baselineAligned="false"
+    android:orientation="vertical"
+    android:padding="@dimen/activity_horizontal_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".MenuActivity" >
 
-</RelativeLayout>
+    <LinearLayout
+        android:layout_width="310dp"
+        android:layout_height="160dp"
+        android:gravity="center_horizontal"
+        android:orientation="horizontal" >
+
+        <ImageButton
+            style="@style/MainMenuButton"
+            android:id="@+id/ibNews"
+            
+            android:layout_height="fill_parent"
+            android:layout_marginRight="20dp"
+            android:layout_weight="0.5"
+            android:adjustViewBounds="@bool/no"
+            android:alpha="0.8"
+            android:contentDescription="@string/menu_news_alternate"
+            android:fadingEdge="none"
+            android:padding="0dp"
+            android:scaleType="fitCenter"
+            android:src="@drawable/menu_item"
+            android:layout_marginBottom="20dp" />
+
+        <ImageButton
+            android:id="@+id/ibParties"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:layout_marginRight="20dp"
+            android:layout_weight="0.5"
+            android:adjustViewBounds="@bool/no"
+            android:alpha="0.8"
+            android:contentDescription="@string/menu_parties_alternate"
+            android:fadingEdge="none"
+            android:padding="0dp"
+            android:scaleType="fitCenter"
+            android:src="@drawable/menu_item" 
+            android:layout_marginBottom="20dp"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="310dp"
+        android:layout_height="140dp"
+        android:gravity="center_horizontal"
+        android:orientation="horizontal" >
+
+        <ImageButton
+            android:id="@+id/ibPictures"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:layout_marginRight="20dp"
+            android:layout_weight="0.5"
+            android:adjustViewBounds="@bool/no"
+            android:alpha="0.8"
+            android:contentDescription="@string/menu_pictures_alternate"
+            android:fadingEdge="none"
+            android:padding="0dp"
+            android:scaleType="fitCenter"
+            android:src="@drawable/menu_item" />
+
+        <ImageButton
+            android:id="@+id/ibArtists"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:layout_marginRight="20dp"
+            android:layout_weight="0.5"
+            android:adjustViewBounds="@bool/no"
+            android:alpha="0.8"
+            android:contentDescription="@string/menu_artists_alternate"
+            android:fadingEdge="none"
+            android:padding="0dp"
+            android:scaleType="fitCenter"
+            android:src="@drawable/menu_item" />
+    </LinearLayout>
+
+</LinearLayout>
