--- a/res/layout/activity_menu.xml
+++ b/res/layout/activity_menu.xml
@@ -1,16 +1,20 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/rlBg"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="@drawable/untitled"
-    android:baselineAligned="false"
+    android:background="@drawable/bg_1"
+    android:gravity="center_horizontal"
     android:orientation="vertical"
-    android:padding="@dimen/activity_horizontal_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".MenuActivity" >
+
+    <ImageView
+        android:id="@+id/prspct_logo"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:contentDescription="@string/logo_desc"
+        android:paddingTop="20dp"
+        android:src="@drawable/prpsct_logo_w" />
 
     <LinearLayout
         android:layout_width="fill_parent"
@@ -20,17 +24,18 @@
         android:orientation="horizontal" >
 
         <Button
-            android:id="@+id/ibNews"
+            android:id="@+id/bNews"
             style="@style/MainMenuButton"
             android:contentDescription="@string/menu_news_alternate"
             android:text="@string/menu_news" />
 
         <Button
-            android:id="@+id/ibParties"
+            android:id="@+id/bEvents"
             style="@style/MainMenuButton"
             android:contentDescription="@string/menu_parties_alternate"
             android:src="@drawable/menu_item"
             android:text="@string/menu_parties" />
+
     </LinearLayout>
 
     <LinearLayout
@@ -40,35 +45,72 @@
         android:orientation="horizontal" >
 
         <Button
-            android:id="@+id/ibPictures"
+            android:id="@+id/bPictures"
             style="@style/MainMenuButton"
             android:contentDescription="@string/menu_pictures_alternate"
             android:src="@drawable/menu_item"
             android:text="@string/menu_pictures" />
 
         <Button
-            android:id="@+id/ibArtists"
+            android:id="@+id/bArtists"
             style="@style/MainMenuButton"
             android:contentDescription="@string/menu_artists_alternate"
             android:src="@drawable/menu_item"
             android:text="@string/menu_artists" />
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical" >
+    <RelativeLayout
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent" >
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" >
-            <Button
-                style="@style/MainMenuButton_two" />
-            <Button
-                style="@style/MainMenuButton_two" />
-            <Button
-                style="@style/MainMenuButton_two"/>
-        </LinearLayout>
-    </LinearLayout>
+        <FrameLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentLeft="true" >
+
+            <Button style="@style/MainMenuButton_two" />
+
+            <ImageView
+                android:id="@+id/settings_button"
+                style="@style/MainMenuButton_two"
+                android:clickable="true"
+                android:contentDescription="@string/info_button_alternate"
+                android:src="@android:drawable/ic_menu_preferences" />
+        </FrameLayout>
+
+        <FrameLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_centerInParent="true" >
+
+            <Button style="@style/MainMenuButton_two" />
+
+            <ImageView
+                android:id="@+id/info_button"
+                style="@style/MainMenuButton_two"
+                android:clickable="true"
+                android:contentDescription="@string/info_button_alternate"
+                android:src="@android:drawable/ic_dialog_info" />
+        </FrameLayout>
+
+        <FrameLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentRight="true" >
+
+            <Button style="@style/MainMenuButton_two" />
+
+            <ImageView
+                android:id="@+id/share_button"
+                style="@style/MainMenuButton_two"
+                android:clickable="true"
+                android:contentDescription="@string/info_button_alternate"
+                android:src="@android:drawable/ic_menu_share" />
+        </FrameLayout>
+
+    </RelativeLayout>
 
 </LinearLayout>
