--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -1,4 +1,4 @@
-<resources>
+<resources xmlns:android="http://schemas.android.com/apk/res/android">
 
     <!--
         Base application theme, dependent on API level. This theme is replaced
@@ -22,14 +22,14 @@
 	    <item name="android:layout_margin">15dp</item>
 	    <item name="android:padding">0dp</item>
 	    <item name="android:layout_weight">1</item>
-	    <item name="android:alpha">1</item>
 	    <item name="android:scaleType">fitXY</item>
 	    <item name="android:background">@drawable/m</item>
 	    <item name="android:adjustViewBounds">false</item>
+	    <item name="android:alpha">0.7</item>
 	</style>
 	<style name="MainMenuButton_two" >
-	    <item name="android:layout_width">30dp</item>
-	    <item name="android:layout_height">30dp</item>
+	    <item name="android:layout_width">40dp</item>
+	    <item name="android:layout_height">40dp</item>
 	    <item name="android:layout_margin">15dp</item>
 	    <item name="android:padding">0dp</item>
 	    <item name="android:layout_weight">1</item>
