Most news related work

--- a/res/layout/activity_news.xml
+++ b/res/layout/activity_news.xml
@@ -1,4 +1,4 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -6,30 +6,18 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".NewsActivity" >
+    tools:context=".NewsActivity"
+    android:orientation="vertical" >
 
-    <RelativeLayout
-        android:id="@+id/relativeLayout1"
+    <Button
+        android:id="@+id/button1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" >
-    </RelativeLayout>
+        android:text="Button" />
 
-    <TextView
-        android:id="@+id/tvNewsLoading"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:text="@string/loading" />
+    <ListView
+        android:id="@android:id/list"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
-    <ImageView
-        android:contentDescription="@string/LoadingDesc"
-        android:id="@+id/ivNewsLoading"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/relativeLayout1"
-        android:layout_centerHorizontal="true"
-        android:src="@android:drawable/ic_popup_sync" />
-
-</RelativeLayout>
+</LinearLayout>
