--- a/res/layout/newsitem_listview_row.xml
+++ b/res/layout/newsitem_listview_row.xml
@@ -3,7 +3,8 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="horizontal"
-    android:padding="10dp" >
+    android:padding="10dp"
+    android:background="#30FFFFFF" >
 
     <ImageView
         android:id="@+id/imgIcon"
@@ -21,7 +22,7 @@
         android:layout_marginBottom="5dp"
         android:layout_marginTop="5dp"
         android:gravity="center_vertical"
-        android:textColor="#000000"
+        android:textColor="#FFFFFF"
         android:textSize="22dp"
         android:textStyle="bold" />
 
